@@ -46,8 +46,5 @@
  - Validate FreeBSD 9.x support
 	- KVM instance?
 
- - Custom DNS records added to sub-domains includes SOA and $ttl
-	- https://www.virtualmin.com/node/25319
-
- - Control access to Nginx module by domain owners
-	- https://www.virtualmin.com/node/25293
+ - Multi-line directives in Nginx module
+	- https://www.virtualmin.com/node/25369
